2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-08-17  Mark McLoughlin  <mark@skynet.ie>

	* src/egg-recent-item.[ch],
	  src/egg-recent-model.c,
	  src/egg-recent-view-gtk.c: sync to latest libegg.

2004-08-03  Bastien Nocera  <hadess@hadess.net>

	* data/.cvsignore: upd

2004-08-03  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/handlers.sh:
	* src/bacon-video-widget-xine.c: (setup_config):
	install the url-handlers (pnm, rtsp, mms and mmsh) at install-time,
	not at run-time

2004-07-30  Bastien Nocera  <hadess@hadess.net>

	* data/totem.keys: add audio/x-pn-realaudio-plugin for the benefit
	of the BBC Radio website

2004-07-28  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_open):
	remove unused debug
	* src/totem-pl-parser.c: (totem_pl_parser_add_asf_parser),
	(totem_pl_parser_add_asf): fix parsing of ASX playlists

============ Version 0.99.15.1

2004-07-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS:
	* configure.in: yay, I suck at doing releases

============ Version 0.99.15

2004-07-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.99.15

2004-07-23  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget.h: removed the second occurence of
	BVW_ERROR_FILE_PERMISSION (Closes: #148219)
	

2004-07-23  Bastien Nocera  <hadess@hadess.net>

	* data/desktop.sh: oops, forgot that

============ Version 0.99.14

2004-07-22  Bastien Nocera  <hadess@hadess.net>

	* NEWS: 0.99.14
	* configure.in: upd

2004-07-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_window_key_press_event): "Open location..." and
	"Open..." now work in fullscreen (Closes: #147513)

2004-07-22  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_aspect_ratio),
	(bacon_video_widget_get_popt_table),
	(bacon_video_widget_error_quark):
	* src/bacon-video-widget-xine.c: (load_audio_out_driver),