@@ -1,3 +1,9 @@
+2004-08-23  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-properties.c:
+	(bacon_video_widget_properties_set_from_current):
+	Only try to get more audio/video metadata if audio/video is present
+
 2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Add «nb» to ALL_LINGUAS.
